[tool.poetry]
name = "kivy-example"
version = "0.1.0"
description = ""
authors = ["abetomo <abe@enzou.tokyo>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kivy = {extras = ["base"], version = "^2.0.0"}

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
